--- a/Task Manager App/src/App.css
+++ b/Task Manager App/src/App.css
@@ -3,6 +3,54 @@
   padding: 0;
   box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
-  background-color: black;
-  color: white;
+}
+
+.container {
+  width: 80%;
+  height: 100vh;
+  margin: auto;
+  background-color: aquamarine;
+}
+
+.tittle {
+  text-align: center;
+  padding: 10px;
+}
+
+.btn {
+  width: 100%;
+  border: 1px solid red;
+  padding: 10px;
+}
+
+.filter-bar {
+  width: full;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.form {
+  width: full;
+
+  label {
+    display: block;
+    margin-left: 20px;
+  }
+
+  input {
+    width: 30%;
+    padding: 10px;
+    border-radius: 6px;
+    margin: 20px;
+  }
+
+  button {
+    padding: 10px;
+    border-radius: 6px;
+    background-color: blueviolet;
+    color: white;
+    display: block;
+    margin-left: 20px;
+  }
 }
